Fix player banner height not shrinking when banners overflow to another row.

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     text-align: center;
     background: #BBBBBB;
 
-    height: 98%;
+    height: auto;
     border: 2px solid #000000;
     border-radius: 10px;
     color: black;
@@ -205,10 +205,7 @@ button:active {
 }
 
 .playerBannersContainer {
-    border: none;
-    border-spacing: 0;
-    height: 100%;
-    /*width: 100%;*/
+    height: 100% ;
     display: flex;
 
     flex-direction: row;
